2002-01-18	Fixes <mschimek@users.sf.net>

	* Improved timestamping in audio&video interfaces.
	* audio/arts.c: Added, ported from Zapping. (Just for
	  completeness, stinks no less than the ESD interface.)

2002-01-13	Fixes <mschimek@users.sf.net>

	* test/preview.c: Restored.
	* video/mpeg1.c: Fixed bug in frame skipping code. 

2001-12-11	<mschimek@users.sf.net>

	* video/mpeg1.c: executed MC preparation despite the picture not being
	  referenced. (However in normal IPB streams this occurs just once.)
	* b_mp1e.c: Fixed coded frame rate setup.

2001-12-05	<mschimek@users.sf.net>

	* Added pmmx_YUV420_0, pmmx_YUYV_0 (experimental).

2001-12-03	YUV stream interface <mschimek@users.sf.net>

	* Added, contributed by Harm van der Heijden.

2001-11-28	Multiplexer fixes <mschimek@users.sf.net>

	* systems/mpeg1.c, mpeg2.c, vcd.c: Fixed I picture PTS reorder
	  offset bug, created incorrect I PTS when encoding B frames
	  (not in 1.9.1).
	* -e0: Fixed incorrect P picture offset.
	* -e1: Fake B picture PTS not coded anymore, fixed incorrect
	  I/P PTS offset in video/mpeg1.c.
	* -e2: worked. :-)

2001-11-27	<mschimek@users.sf.net>

	* v4l.c: Try VIDEO_PALETTE_YUYV before _YUV422. (Some drivers
	  do not support _YUYV, and YUV422 may be YUYV (bttv), UYVY
	  (dc10) or according to v4l api spec YYYYUUVV.)
	* psycho.c: Fixed array initialization, segfault was possible.

2001-11-20	<mschimek@users.sf.net>

	* motion.c fix: ignored result 2nd of (0,0) test (rare, not critical).
	* mp1e.1: Corrected -F typo in examples.
	* video/mpeg1.c: Frame skipping flaws. Rewrote.

2001-11-06	<mschimek@users.sf.net>

	* configure.in: Corrected $AS.
	* v4l.c: grab size / capture size / decimating fixed.
	* v4l2.c: 288->240 fallback fixed.

2001-11-01	<mschimek@users.sf.net>

	* mp2.c: Fixed audio table selection (wrong sampling_freq).
	* oss.c: Mixer always set volume of line, not requested source.
	* main.c: Added fallback for unsupported joint stereo.
	* mp1e.1: Corrected a few typos.
